# sphinx-ext-mystmd

./: README.md  pyproject.toml
.github/workflows/: cd.yml
docs/: extend-sphinx.md  include-sphinx.md  index.md  myst.yml
docs/sphinx/: index.rst
example/: index.md
example/sphinx/: conf.py  other.rst
src/sphinx_ext_mystmd/: __init__.py  builder.py  transform.py  utils.py
